# agx_ros1

./: .dockerignore  .env  .env.agx  .gitattributes  .gitignore  README.md
docker/: Makefile  README.md  dashboard.py  docker-compose.agx.yaml  docker-compose.yaml  modules.yaml
docker/base/: Dockerfile  Dockerfile.l4t
docker/control/: .dockerignore  Dockerfile  control.md  docker-compose.agx.yaml  docker-compose.yaml  entrypoint.sh
docker/control/src/hdl_ws/src/: dummy_lidar.py
docker/control/src/hdl_ws/src/fast_gicp/: CMakeLists.txt
docker/control/src/hdl_ws/src/hdl_global_localization/: CMakeLists.txt
docker/control/src/hdl_ws/src/hdl_localization/: CMakeLists.txt
docker/control/src/hdl_ws/src/hdl_localization/apps/: hdl_localization_nodelet.cpp
docker/control/src/hdl_ws/src/hdl_localization/data/: .gitignore  0305_b1_map.pcd  downsampled_0107_surface_depth_9_1_1.pcd
docker/control/src/hdl_ws/src/hdl_localization/launch/: hdl_localization.launch
docker/control/src/hdl_ws/src/hdl_localization/rviz/: hdl_localization.rviz
docker/control/src/hdl_ws/src/hdl_localization/scripts/: velodyne_simple_stop.py
docker/control/src/hdl_ws/src/ndt_omp/: CMakeLists.txt
docker/control/src/hdl_ws/src/ndt_omp/apps/: align.cpp
docker/control/src/keyboard_control_ws/src/six_wheels_teleop/: CMakeLists.txt  package.xml
docker/control/src/keyboard_control_ws/src/six_wheels_teleop/src/: imu_compensation.cpp  imu_teletop_0506.cpp  imu_teletop_0530.cpp  imu_teletop_0604.cpp  imu_teletop_0609.cpp  imu_teletop_0612.cpp  imu_teletop_0617.cpp  imu_teletop_0622.cpp  imu_teletop_0630.cpp  imu_teletop_0701.cpp  imu_teletop_0805.cpp  imu_teletop_0908.cpp  imu_teletop_1.cpp  imu_teletop_2.cpp  inference_collect.cpp  inference_ros1.py  sub_imu_1.cpp  teletop.cpp  teletop_imu.cpp
docker/control/src/lidar_ws/src/LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
docker/control/src/lidar_ws/src/LeGO-LOAM/LeGO-LOAM/include/: utility.h
docker/control/src/lidar_ws/src/LeGO-LOAM/LeGO-LOAM/launch/: run.launch
docker/foxglove_ros1/: Dockerfile  docker-compose.agx.yaml  docker-compose.yaml
docker/roscore/: .dockerignore  docker-compose.agx.yaml  docker-compose.yaml
(+2 files in other folders)
